--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>MARIA ELISA</title>
 		<!-- link to main stylesheet -->
+		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
@@ -18,7 +19,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h5>Hi there, I'm Maria Elisa!</h1>
+        		<h4>Hi there, I'm Maria Elisa!</h4>
 				<p>South China University of Technology '15. Computer Science graduate</a></p>
 		<br>
             <div class="links">
