--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>MARIA ELISA</title>
 		<!-- link to main stylesheet -->
 		<meta charset="utf-8"/>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
