--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             	<div class="navbar content">
     		<ul>
         		<li><a href=#home"/">Home</a></li>
-	        	<li><a href=#about-me"/About">About Me</a></li>
+	        	<li><a href=#about-me"/">About Me</a></li>
                 <li><a href="#experience"><p>Experience</p></a></li>
                 <li><a href="#skill"><p>Skill</p></a></li>
 				<li><a href="#project"><p>Project</p></a></li>
@@ -30,9 +30,7 @@
 			</nav>
 		</div>
 
-		<div class="container">
-        		<h1>Maria Elisa</h1>
-		<br>
+		
             <div class="links">
             <ul>
                 <li><div class="grow"><a href="http://instagram.com/mariaelisalisa" target="_blank"><i class="fa fa-instagram"></i></a></div></li>
