--- a/index.html
+++ b/index.html
@@ -73,16 +73,13 @@
 			</div>
         	</section>
         
-		 <footer class="container">
-			<div class="row">
-
-  				<p class="col-sm-4">&copy; 2017 Maria Elisa
-				</p>
-    				<ul class="col-sm-8">
-    
-   					 </ul>
-  
-  			</div>
+		<footer id='footer-copyright'>
+			<div class='container'>
+			<p>Created with <i class='fa fa-heart'></i>
+			<em>by</em>
+				<a href='https://mariaelisa25.github.io/'>Maria Elisa</a></p>
+				</div>
+				</footer>
 
 		</footer>
 	</body>
