--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         
 		<footer id='footer-copyright'>
 			<div class='container'>
-			<p>Created with <i class='fa fa-heart'></i>
-			<em>by</em>
+			<p>Created with <i class='fa fa-heart'></i> by
 				<a href='https://mariaelisa25.github.io/'>Maria Elisa</a></p>
 				</div>
 				</footer>
