--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         	<meta name="description" content="My Website">
-        	<meta name="author" content="Maria Elisa"
+        	<meta name="author" content="Maria Elisa">
+		<link rel="shortcut icon" type="image/png" href="/img/favicon.jpg"/>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
 	</head>
 	<body>
 		<div class="navbar-wrapper">
