--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="links">
             <ul>
                 <li><div class="grow"><a href="http://instagram.com/mariaelisalisa" target="_blank"><i class="fa fa-instagram"></i></a></div></li>
-	            <li><div class="grow"><a href="http://twitter.com/hellomariaelisa" target="_blank"><i class="fa fa-twitter"></i></a></div></li>
+	        <li><div class="grow"><a href="http://twitter.com/hellomariaelisa" target="_blank"><i class="fa fa-twitter"></i></a></div></li>
                 <li><div class="grow"><a href="https://www.linkedin.com/in/maria-elisa" target="_blank"><i class="fa fa-linkedin"></i></a></div></li>
              	<li><div class="grow"><a href="http://github.com/mariaelisa25" target="_blank"><i class="fa fa-github"></i></a></div></li>
                 <li><div class="grow"><a href="http://pinterest.com/marialeung_" target="_blank"><i class="fa fa-pinterest-p"></i></a></div></li>
                 <li><div class="grow"><a href="mailto:maria_el25@yahoo.com" target="_blank"><i class="fa fa-envelope"></i></a></div></li>
-		    	<li><div class="grow"><a href="https://hellomariaelisa.blogspot.co.id/" target="_blank"><i class="fa fa-blog"></i></a></div></li>
-		    	<li><div class="grow"><a href="/#" target="_blank"><i class="fa fa-file-pdf-o"></i></a></div></li>
+		<li><div class="grow"><a href="https://hellomariaelisa.blogspot.co.id/" target="_blank"><i class="fa fa-website"></i></a></div></li>
+		<li><div class="grow"><a href="/#" target="_blank"><i class="fa fa-file-pdf-o"></i></a></div></li>
 			
                 </ul>
 		    
