--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     		<ul>
         		<li><a href=#home"/">Home</a></li>
 	        	<li><a href=#about-me"/">About Me</a></li>
-                <li><a href="#experience"><p>Experience</p></a></li>
-                <li><a href="#skill"><p>Skill</p></a></li>
-				<li><a href="#project"><p>Project</p></a></li>
+		        <li><a href=#education"/">Education</a></li>
+                	<li><a href="#experience"><p>Experience</p></a></li>
+                	<li><a href="#skill"><p>Skill</p></a></li>
+			<li><a href="#project"><p>Project</p></a></li>
     		</ul>
     			</div>
 			</nav>
@@ -56,10 +57,27 @@
                 <p>Hey! I'm Maria. I started my first coding experience when I was a high school student. </p>
             </div>
         	</section>
+		    
+		    <section id="education">
+            <div class="content">
+                <h2>Education</h2>
+		    <h4>South China University of Technology</h4>
+		    <h5>Bachelor of Engineering, major in Computer Science, 2011 - 2015</h5>
+		    <p>test</p>
+
+			</div>
+        	</section>
 
         	<section id="experience">
             <div class="content">
-                <h2>Experience</h2>
+                <h2>Work Experience</h2>
+		    <h4>Undergraduate Researcher</h4>
+		    <h5>South China University of Technology, 2014</h5>
+		    <p>test</p>
+		    
+		    <h4>Undergraduate Researcher</h4>
+		    <h5>South China University of Technology, 2014</h5>
+		    <p>test</p>
 
 			</div>
         	</section>
