--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         	<meta name="author" content="Maria Elisa">
 		<link rel="shortcut icon" type="image/png" href="/img/favicon.jpg"/>
 		<link rel="stylesheet" type="text/css" href="/main.css">
-		<link rel="stylesheet" type="text/css" href="/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
