--- a/index.html
+++ b/index.html
@@ -18,24 +18,28 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		
 
 		
 	</head>
 	<body>
-		<div class="navbar-wrapper">
-            <nav>
-            	
-    		<ul>
-        		<li><a href=#home"/">Home</a></li>
+		
+		
+		
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+  		<div class="container-fluid">
+    		<div class="navbar-header">
+    			</div>
+    		<ul class="nav navbar-nav">
+      			<li><a href=#home"/">Home</a></li>
 	        	<li><a href=#about-me"/">About Me</a></li>
 		        <li><a href=#education"/">Education</a></li>
                 	<li><a href="#experience"><p>Experience</p></a></li>
                 	<li><a href="#skill"><p>Skill</p></a></li>
 			<li><a href="#project"><p>Project</p></a></li>
-    		</ul>
-    			
-			</nav>
-		</div>
+    </ul>
+  </div>
+</nav>
 
 		
             <div class="links">
