--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron text-center">
 	<h1>Maria Elisa</h1> 
 	<p>Hey! I'm Maria </p> 
 	</div>
