--- a/index.html
+++ b/index.html
@@ -21,6 +21,32 @@
 	<h1>Maria Elisa</h1> 
 	<p>Hey! I'm Maria </p> 
 	</div>
+	
+<!-- Container (About Section) -->
+<div class="container-fluid">
+  <h2>About Me/h2>
+  <h4>I studied Computer Science in South China University of Technology for 4 years which from 2011 - 2015. </h4>      
+  <p>Lorem ipsum..</p>
+</div>
+
+<div class="container-fluid bg-white">
+  <h2>Experience</h2>
+  <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
+  <p><strong>VISION:</strong> Our vision Lorem ipsum..
+</div>
+	
+<div class="container-fluid bg-white">
+  <h2>Skill</h2>
+  <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
+  <p><strong>VISION:</strong> Our vision Lorem ipsum..
+</div>
+
+ <div class="container-fluid bg-white">
+  <h2>Project</h2>
+  <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
+  <p><strong>VISION:</strong> Our vision Lorem ipsum..
+</div>
+
 
 </body>
 </html>
