--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   .jumbotron {
-      background-color: #f1ddcf;
+      background-color: #9ccca;
       color: #fff;
+      padding: 100px 25px;
+  }
+  .bg-grey {
+      background-color: #f6f6f6;
+  }
+  .container-fluid {
+      padding: 60px 50px;
   }
   </style>
 </head>
@@ -24,7 +31,7 @@
 	
 <!-- Container (About Section) -->
 <div class="container-fluid">
-  <h2>About Me/h2>
+  <h2>About Me</h2>
   <h4>I studied Computer Science in South China University of Technology for 4 years which from 2011 - 2015. </h4>      
   <p>Lorem ipsum..</p>
 </div>
