--- a/index.html
+++ b/index.html
@@ -50,6 +50,28 @@
   </style>
 </head>
 <body>
+	
+	<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">Logo</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#services">EDUCATION</a></li>
+        <li><a href="#portfolio">EXPERIENCE</a></li>
+        <li><a href="#pricing">SKILL/a></li>
+        <li><a href="#contact">PROJECT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="jumbotron text-center">
 	<h1>Maria Elisa</h1> 
