--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#services">EDUCATION</a></li>
         <li><a href="#portfolio">EXPERIENCE</a></li>
-        <li><a href="#pricing">SKILL/a></li>
+        <li><a href="#pricing">SKILL</a></li>
         <li><a href="#contact">PROJECT</a></li>
       </ul>
     </div>
@@ -79,25 +78,25 @@
 	</div>
 	
 <!-- Container (About Section) -->
-<div class="container-fluid">
+<div class="container-fluid text-center">
   <h2>About Me</h2>
   <h4>I studied Computer Science in South China University of Technology for 4 years which from 2011 - 2015. </h4>      
   <p>Lorem ipsum..</p>
 </div>
 
-<div class="container-fluid bg-white">
+<div class="container-fluid text-center bg-white">
   <h2>Experience</h2>
   <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
   <p><strong>VISION:</strong> Our vision Lorem ipsum..
 </div>
 	
-<div class="container-fluid bg-white">
+<div class="container-fluid text-centeer bg-white">
   <h2>Skill</h2>
   <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
   <p><strong>VISION:</strong> Our vision Lorem ipsum..
 </div>
 
- <div class="container-fluid bg-white">
+ <div class="container-fluid text-center bg-white">
   <h2>Project</h2>
   <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
   <p><strong>VISION:</strong> Our vision Lorem ipsum..
