--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   .jumbotron {
-      background-color: #9ccca;
+      background-color: #f1ddcf;
       color: #fff;
       padding: 100px 25px;
   }
@@ -22,7 +22,7 @@
 	  
   .navbar {
       margin-bottom: 0;
-      background-color: #9ccca;
+      background-color: #f1ddcf;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -90,7 +90,7 @@
   <p><strong>VISION:</strong> Our vision Lorem ipsum..
 </div>
 	
-<div class="container-fluid text-centeer bg-white">
+<div class="container-fluid text-center bg-white">
   <h2>Skill</h2>
   <h4><strong>MISSION:</strong> Our mission lorem ipsum..</h4>      
   <p><strong>VISION:</strong> Our vision Lorem ipsum..
