--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-center">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#services">EDUCATION</a></li>
         <li><a href="#portfolio">EXPERIENCE</a></li>
