--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #9ccca !important;
+      color: #f1ddcf !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
