--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   .jumbotron {
-      background-color: #f1ddcf;
+      background-color: #ffb7c5;
       color: #fff;
       padding: 100px 25px;
   }
@@ -22,7 +22,7 @@
 	  
   .navbar {
       margin-bottom: 0;
-      background-color: #f1ddcf;
+      background-color: #ffb7c5;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
