--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#services">EDUCATION</a></li>
-        <li><a href="#portfolio">EXPERIENCE</a></li>
-        <li><a href="#pricing">SKILL</a></li>
-        <li><a href="#contact">PROJECT</a></li>
+        <li><a href="#education>EDUCATION</a></li>
+        <li><a href="#experience">EXPERIENCE</a></li>
+        <li><a href="#skill">SKILL</a></li>
+        <li><a href="#project">PROJECT</a></li>
       </ul>
     </div>
   </div>
