--- a/index.html
+++ b/index.html
@@ -199,16 +199,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#education>EDUCATION</a></li>
-        <li><a href="#experience">EXPERIENCE</a></li>
-        <li><a href="#skill">SKILL</a></li>
-        <li><a href="#project">PROJECT</a></li>
+        <li><a href="#"education">EDUCATION</a></li>
+        <li><a href="#"experience">EXPERIENCE</a></li>
+        <li><a href="#"skill">SKILL</a></li>
+        <li><a href="#"project">PROJECT</a></li>
       </ul>
     </div>
   </div>
