--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #ffddf4;
+      background-color: #f8d9d7;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
@@ -120,7 +120,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #ffddf4;
+      background-color: #f8d9d7;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
