--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <!-- Container (Pricing Section) -->
 <div id="skill" class="container-fluid">
   <div class="text-center">
-    <h2>Skill</h2>
+    <h2>Skills + Tools</h2>
     <h4>Choose a payment plan that works for you</h4>
   </div>
   <div class="row slideanim">
@@ -405,7 +405,7 @@
 
 <!-- Container (Contact Section) -->
 <div id="project" class="container-fluid bg-grey">
-  <h2 class="text-center">Project</h2>
+  <h2 class="text-center">Projects</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
