--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   }  
   .jumbotron {
       background-color: #f8d9d7;
-      color: #fff;
+      color: #444440;
       padding: 100px 25px;
-      font-family: Montserrat, sans-serif;
+      font-family: Playfair Display Black, sans-serif;
   }
   .container-fluid {
       padding: 60px 50px;
@@ -133,7 +133,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffddf4 !important;
+      color: #f8d9d7 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -339,7 +339,7 @@
 <!-- Container (Pricing Section) -->
 <div id="skill" class="container-fluid">
   <div class="text-center">
-    <h2>Skills + Tools</h2>
+    <h2>Skill + Tools</h2>
     <h4>Choose a payment plan that works for you</h4>
   </div>
   <div class="row slideanim">
@@ -405,7 +405,7 @@
 
 <!-- Container (Contact Section) -->
 <div id="project" class="container-fluid bg-grey">
-  <h2 class="text-center">Projects</h2>
+  <h2 class="text-center">Project</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
