--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <div class="jumbotron text-center">
   <h1>Maria Elisa</h1> 
-  <p>We specialize in blablabla</p> 
+  <p>SCUT 15 Computer Science</p> 
   
 </div>
 
