--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #ffbcd9;
+      background-color: #ffddf4;
       color: #444440;
       padding: 100px 25px;
       font-family: Playfair Display Black, sans-serif;
@@ -120,7 +120,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #ffbcd9;
+      background-color: #ffddf4;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -133,7 +133,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f8d9d7 !important;
+      color: #ffdf4 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
