--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffdf4 !important;
+      color: #ffddf4 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
