--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
 <!-- Container (Services Section) -->
 <div id="education" class="container-fluid text-center">
   <h2>Education</h2>
-  <h4>What we offer</h4>
+  <h4>South China University of Technology, B.Eng in Computer Science, 2011 - 2015</h4>
+  
+  <h4>Guangdong University of Foreign Studies, Chinese Language, 2015 - 2016</h4>
+  
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
@@ -276,7 +279,7 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="experience" class="container-fluid text-center bg-grey">
-  <h2>Experience</h2><br>
+  <h2>Work Experience</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
