--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #ffddf4;
+      background-color: #ffdae9;
       color: #444440;
       padding: 100px 25px;
       font-family: Playfair Display Black, sans-serif;
@@ -133,7 +133,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffddf4 !important;
+      color: #ffdae9 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
