--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #ffddf4;
+      background-color: #ffdae9;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
