--- a/index.html
+++ b/index.html
@@ -215,9 +215,17 @@
 </nav>
 
 <div class="jumbotron text-center">
+  
+        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+  
+  
   <h1>Maria Elisa</h1> 
   
+  
+  
 </div>
+
+
 
 <!-- Container (About Section) -->
 <div id="about-me" class="container-fluid text-center">
