--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 <div class="jumbotron text-center">
   
-        <img src="bandmember.jpg" class="img-circle person" width="255" height="255">
+        <img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" width="255" height="255">
   
   
   <h1>Maria Elisa</h1> 
