--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made with <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>Made by <a href="https://mariaelisa25.github.io/">me</a></p>
 </footer>
 
 <script>
