--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   .container-fluid {
       padding: 60px 50px;
   }
-  .bg-grey {
-      background-color: #f6f6f6;
+  .bg-pink {
+      background-color: #ffdae9;
   }
   .logo-small {
       color: #f4511e;
@@ -144,6 +144,7 @@
       font-size: 20px;
       margin-bottom: 20px;
       color: #f4511e;
+      
   }
   .slideanim {visibility:hidden;}
   .slide {
@@ -240,7 +241,7 @@
 
 
 <!-- Container (Services Section) -->
-<div id="education" class="container-fluid text-center">
+<div id="education" class="container-fluid text-center bg-pink">
   <h2>Education</h2>
   <h4>South China University of Technology, B.Eng in Computer Science, 2011 - 2015</h4>
   
@@ -285,7 +286,7 @@
 </div>
 
 <!-- Container (Portfolio Section) -->
-<div id="experience" class="container-fluid text-center bg-grey">
+<div id="experience" class="container-fluid text-center">
   <h2>Work Experience</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
@@ -347,7 +348,7 @@
 </div>
 
 <!-- Container (Pricing Section) -->
-<div id="skill" class="container-fluid">
+<div id="skill" class="container-fluid bg-pink">
   <div class="text-center">
     <h2>Skill + Tools</h2>
     <h4>Choose a payment plan that works for you</h4>
