--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
   .bg-pink {
       background-color: #ffdae9;
   }
+  
+   .bg-black {
+      background-color: #ffdae9;
+  }
+  
   .logo-small {
       color: #f4511e;
       font-size: 50px;
@@ -415,7 +420,7 @@
 </div>
 
 <!-- Container (Contact Section) -->
-<div id="project" class="container-fluid bg-grey">
+<div id="project" class="container-fluid ">
   <h2 class="text-center">Project</h2>
   <div class="row">
     <div class="col-sm-5">
@@ -452,7 +457,7 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center bg-black">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
