--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
   body {
       font: 400 15px Lato, sans-serif;
@@ -47,13 +48,56 @@
       background-color: #ffdae9;
   }
   
-  .logo-small {
-      color: #f4511e;
-      font-size: 50px;
+  .fa {
+  padding: 3px;
+  font-size: 20px;
+  width: 24px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
   }
-  .logo {
-      color: #f4511e;
-      font-size: 200px;
+
+  .fa:hover {
+    opacity: 0.7;
+  }
+
+  .fa-instagram {
+  background: #fff;
+  color: #ffdae9;
+  }
+
+  .fa-twitter {
+  background: #fff;
+  color: #ffdae9;
+  }
+
+ .fa-github {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-linkedin {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-google {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-tumblr {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-pinterest {
+  background: #fff;
+  color: #ffdae9;
+ }
+  
+  
   }
   .thumbnail {
       padding: 0 0 15px 0;
@@ -227,8 +271,15 @@
   
   <h1>Maria Elisa</h1> 
   
-  
-  
+  <!-- Add font awesome icons -->
+<a href="#" class="fa fa-instagram"></a>
+<a href="#" class="fa fa-twitter"></a>
+<a href="#" class="fa fa-github"></a>
+<a href="#" class="fa fa-linkedin"></a>
+<a href="#" class="fa fa-google"></a>
+<a href="#" class="fa fa-tumblr"></a>
+<a href="#" class="fa fa-pinterest"></a>
+
 </div>
 
 
@@ -425,7 +476,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made by <a href="https://mariaelisa25.github.io/">me</a></p>
+  <p>Made with <span class="glyphicon glyphicon-heart"> </p>
 </footer>
 
 <script>
