--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
       color: #303030;
       font-weight: 400;
       margin-bottom: 30px;
-  }  
+  } 
+  
+   h6 {
+      font: 400 20px Lato, sans-serif;
+      line-height: 1.8;
+      color: #818181;
+  }
+  
+
   .jumbotron {
       background-color: #ffdae9;
       color: #444440;
@@ -269,7 +277,8 @@
         <img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" width="255" height="255">
   
   
-  <h1>Maria Elisa</h1> 
+  <h1>Maria Elisa</h1>
+  <h6>Tech & Digital Enthusiast</h6>
   
   <!-- Add font awesome icons -->
 <a href="#" class="fa fa-instagram"></a>
