--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
       border-radius: 0;
       font-family: Montserrat, sans-serif;
   }
+  
+ 
+  
   .navbar li a, .navbar .navbar-brand {
       color: #fff !important;
   }
@@ -316,33 +319,18 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="experience" class="container-fluid text-center">
-  <h2>Work Experience</h2><br>
-  <h4>What we have created</h4>
-  <div class="row text-center slideanim">
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
-      </div>
-    </div>
+    <h2>Work Experience</h2>
+  
+  <h3>Marketing</h3>
+  <h4>PT. Kohyei Indonesia, March 2017 – Sept 2017</h4>
+<p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service.</p>
+  
+  <h3>Undergraduate Researcher</h3>
+  <h4>South China University of Technology, March 2014 – June 2014</h4>
+<p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service.</p>
+
   </div><br>
   
-  <h2>What our customers say</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
