--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="experience" class="container-fluid text-center">
-    <h2>Work Experience</h2>
+    <h2>Work Experience</h2><br>
   
   <h3>Marketing</h3>
-  <h4>PT. Kohyei Indonesia, March 2017 – Sept 2017</h4>
-<p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service.</p>
+  <h4>PT. Kohyei Indonesia, March 2017 – June 2017</h4>
+  <p>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. My responsibles are market research, develop price strategies, working with vendors and suppliers and interpret Mandarin to Indonesian, vice versa.</p><br>
   
   <h3>Undergraduate Researcher</h3>
   <h4>South China University of Technology, March 2014 – June 2014</h4>
