--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       color: #818181;
   }
   
-
   .jumbotron {
       background-color: #ffdae9;
       color: #444440;
@@ -53,6 +52,10 @@
   }
   
    .bg-black {
+      background-color: #ffdae9;
+  }
+  
+  .bg-black {
       background-color: #ffdae9;
   }
   
@@ -104,7 +107,11 @@
   background: #fff;
   color: #ffdae9;
  }
-  
+ 
+  .fa-file {
+  background: #fff;
+  color: #ffdae9;
+ }
   
   }
   .thumbnail {
@@ -286,11 +293,12 @@
   <!-- Add font awesome icons -->
 <a href="#" class="fa fa-instagram"></a>
 <a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-github"></a>
+<a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
 <a href="#" class="fa fa-linkedin"></a>
 <a href="#" class="fa fa-google"></a>
 <a href="#" class="fa fa-tumblr"></a>
 <a href="#" class="fa fa-pinterest"></a>
+<a href="#" class="fa fa-file"></a>
 
 </div>
 
@@ -329,7 +337,6 @@
   <h4>South China University of Technology, March 2014 – June 2014</h4>
 <p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service.</p>
 
-  </div><br>
   
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
