--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 <!-- Container (Pricing Section) -->
 <div id="skill" class="container-fluid bg-pink">
   <div class="text-center">
-    <h2>Skill + Tools</h2>
+    <h2>Skills + Tools</h2>
     <h4>Choose a payment plan that works for you</h4>
     
     
