--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
   
   <!-- Add font awesome icons -->
 <a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-twitter"></a>
+<a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
 <a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-google"></a>
-<a href="#" class="fa fa-pinterest"></a>
+<a href="https://hellomariaelisa.blogspot.co.id/" class="fa fa-google"></a>
+<a href="http://pinterest.com/marialeung_" class="fa fa-pinterest"></a>
 <a href="#" class="fa fa-file"></a>
 
 </div>
