--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   }
   
   .fa {
-  padding: 3px;
+  padding: 4px;
   font-size: 24px;
-  width: 30px;
+  width: 32px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -71,6 +71,11 @@
 
   .fa:hover {
     opacity: 0.7;
+  }
+  
+  .fa-envelope {
+  background: #fff;
+  color: #ffdae9;
   }
 
   .fa-instagram {
@@ -291,6 +296,7 @@
   <h6>Tech & Digital Enthusiast</h6>
   
   <!-- Add font awesome icons -->
+<a href="mailto:maria_el25@yahoo.com" class="fa fa-envelope"></a>
 <a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a>
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
