--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 <a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a>
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
-<a href="#" class="fa fa-linkedin"></a>
+<a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
 <a href="https://hellomariaelisa.blogspot.co.id/" class="fa fa-google"></a>
 <a href="http://pinterest.com/marialeung_" class="fa fa-pinterest"></a>
 <a href="#" class="fa fa-file"></a>
@@ -313,7 +313,7 @@
 <div id="about-me" class="container-fluid text-center">
       <h2>About Me</h2><br>
       
-      <p>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I started my coding experience since I started blogging and I learned to code to design my blog, which why I still coding and never looked back. I love blogging, design, and coding. Besides that, I have interest towards digital industry, e-commerce, mobile apps development, and startup. </p>
+      <p>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I started coding when I need to code and design my blog, probably why I still love coding and never turn back. I love blogging, design, and coding. I also have interest towards digital industry, e-commerce, mobile apps development, and startup. </p>
             
     </div>
   </div>
