--- a/index.html
+++ b/index.html
@@ -18,12 +18,19 @@
       color: #818181;
   }
   h2 {
-      font-size: 24px;
-      text-transform: uppercase;
+      font-size: 26px;
       color: #303030;
       font-weight: 600;
       margin-bottom: 30px;
   }
+  
+   h3 {
+      font-size: 23px;
+      color: #303030;
+      font-weight: 600;
+      margin-bottom: 30px;
+  }
+  
   h4 {
       font-size: 19px;
       line-height: 1.375em;
@@ -334,16 +341,12 @@
 <div id="experience" class="container-fluid text-center">
     <h2>Work Experience</h2><br>
   
-  <h3>Blogger</h3>
+  <h3>Blogger</h2>
+  <h4>June 2016 - present</h3>
   
-  <h3>Marketing</h3>
-  <h4>PT. Kohyei Indonesia, March 2017 – June 2017</h4>
+  <h3>Marketing, PT. Kohyei Indonesia,</h3>
+  <h4> March 2017 – June 2017</h4>
   <p>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. My responsibles are market research, develop price strategies, working with vendors and suppliers and interpret Mandarin to Indonesian, vice versa.</p><br>
-  
-  <h3>Undergraduate Researcher</h3>
-  <h4>South China University of Technology, March 2014 – June 2014</h4>
-<p>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service.</p>
-
   
   
 </div>
@@ -381,9 +384,14 @@
     <div class="row">
       <div class="col-sm-6">
     
+     <h4>Analysis</h4>
+  <div class="progress">
+    <div class="progress-bar" style="width:75%"></div>
+  </div><br>
+     
      <h4>Photoshop</h4>
   <div class="progress">
-    <div class="progress-bar" style="width:80%"></div>
+    <div class="progress-bar" style="width:90%"></div>
   </div><br>
 
 <h4>Blogging</h4>
@@ -393,7 +401,7 @@
   
   <h4>Microsoft Office</h4>
   <div class="progress">
-    <div class="progress-bar" style="width:80%"></div>
+    <div class="progress-bar" style="width:70%"></div>
   </div><br>
 
     </div>
