--- a/index.html
+++ b/index.html
@@ -58,13 +58,25 @@
       background-color: #ffdae9;
   }
   
-   .bg-black {
-      background-color: #ffdae9;
+  .bg-creme {
+      background-color: #ffdfba;
   }
   
-  .bg-black {
-      background-color: #ffdae9;
+  .bg-yellow {
+      background-color: #ffffba;
   }
+  
+  .bg-mint {
+      background-color: #baffc9;
+  }
+  
+   .bg-blue {
+      background-color: #bae1ff;
+  }
+  
+  
+  
+  
   
   .fa {
   padding: 4px;
@@ -320,7 +332,7 @@
 <div id="about-me" class="container-fluid text-center">
       <h2>About Me</h2><br>
       
-      <p>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I started coding when I need to code and design my blog, probably why I still love coding and never turn back. I love blogging, design, and coding. I also have interest towards digital industry, e-commerce, mobile apps development, and startup. </p>
+      <p>Hey! I'm Maria. I graduated from South China University of Technology in 2015, major in Computer Science. I started coding when I need to code and design my blog, probably why I still love coding and never turn back. From hobby turn into passion which leads me to improve and enhance my coding skill with <b>freeCodeCamp</b>. I also have interest towards digital industry, e-commerce, mobile apps development, and startup. </p>
             
     </div>
   </div>
@@ -329,7 +341,7 @@
 
 
 <!-- Container (Education Section) -->
-<div id="education" class="container-fluid text-center bg-pink">
+<div id="education" class="container-fluid text-center bg-creme">
   <h2>Education</h2>
   <h4>South China University of Technology, B.Eng in Computer Science, 2011 - 2015</h4>
   
@@ -339,7 +351,7 @@
 
 <!-- Container (Work Experience Section) -->
 <div id="experience" class="container-fluid text-center">
-    <h2>Work Experience</h2><br>
+    <h2>Work Experience</h2>
   
   <h3>Blogger</h2>
   <h4>June 2016 - present</h3>
@@ -352,7 +364,7 @@
 </div>
 
 <!-- Container (Skill Section) -->
-<div id="skill" class="container-fluid bg-pink">
+<div id="skill" class="container-fluid bg-blue">
   <div class="text-center">
     <h2>Skills + Tools</h2>
     <div class="row">
@@ -457,7 +469,7 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
-<footer class="container-fluid text-center bg-black">
+<footer class="container-fluid text-center bg-mint">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
