--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   }
   
   .bg-creme {
-      background-color: #FFFFD7;
+      background-color: #fcf1dc;
   }
   
   .bg-yellow {
@@ -67,11 +67,11 @@
   }
   
   .bg-mint {
-      background-color: #baffc9;
+      background-color: #deffee;
   }
   
    .bg-blue {
-      background-color: #bae1ff;
+      background-color: #dbe4ff;
   }
   
   
