--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       background-color: #dbe4ff;
   }
   
+  .bg-purple {
+      background-color: #f0dbff;
+  }
   
   
   
@@ -341,7 +344,7 @@
 
 
 <!-- Container (Education Section) -->
-<div id="education" class="container-fluid text-center bg-creme">
+<div id="education" class="container-fluid text-center bg-mint">
   <h2>Education</h2>
   <h4>South China University of Technology, B.Eng in Computer Science, 2011 - 2015</h4>
   
@@ -469,7 +472,7 @@ To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
 
-<footer class="container-fluid text-center bg-mint">
+<footer class="container-fluid text-center bg-purple">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
