--- a/index.html
+++ b/index.html
@@ -341,8 +341,6 @@
   </div>
 </div>
 
-
-
 <!-- Container (Education Section) -->
 <div id="education" class="container-fluid text-center bg-mint">
   <h2>Education</h2>
@@ -440,7 +438,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
+        
+        <h4>Blogger</span></h4>
+        
+        <center><img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" width="255" height="255"></center>
       </div>
       <div class="item">
         <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
