--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         
         <h4>Blogger</span></h4>
         
-        <center><img src="/img/project-blog.png" class="img-circle person" width="255" height="255"></center>
+        <center><img src="/img/project-blog.png"></center>
       </div>
       <div class="item">
         <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
