--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         
-        <h4>Blogger</span></h4>
+        <h4>Blogger</h4>
+        <h5>June 2016 - present</h5>
         
         <center><img src="/img/project-blog.png"></center>
       </div>
