--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skill">Skill</a></li>
-        <li><a href="#project">Project</a></li>
+        <li><a href="#project">Projects</a></li>
       </ul>
     </div>
   </div>
@@ -425,7 +425,7 @@
 
 <!-- Container (Contact Section) -->
 <div id="project" class="container-fluid ">
-  <h2 class="text-center">Project</h2>
+  <h2 class="text-center">Projects</h2>
   
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
