--- a/index.html
+++ b/index.html
@@ -426,10 +426,14 @@
 <!-- Container (Contact Section) -->
 <div id="project" class="container-fluid ">
   <h2 class="text-center">Projects</h2>
-
-        <h4>hellomariaelisa.blogspot.com</h4>
-        <center><img src="/img/project-blog.png"></center>
+ 
+        <div class="row text-center slideanim">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="/img/project-blog.png" width="400" height="300">
       </div>
+      </div>
+        
       
     </div>
 
