--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
   body {
       font: 400 15px Lato, sans-serif;
@@ -31,25 +32,97 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #f4511e;
-      color: #fff;
+      background-color: #ffdae9;
+      color: #444440;
       padding: 100px 25px;
-      font-family: Montserrat, sans-serif;
+      font-family: Playfair Display Black, sans-serif;
   }
   .container-fluid {
       padding: 60px 50px;
   }
-  .bg-grey {
-      background-color: #f6f6f6;
+.bg-pink {
+      background-color: #ffdae9;
   }
-  .logo-small {
-      color: #f4511e;
-      font-size: 50px;
+  
+  .bg-creme {
+      background-color: #fcf1dc;
   }
-  .logo {
-      color: #f4511e;
-      font-size: 200px;
+  
+  .bg-yellow {
+      background-color: #ffffba;
   }
+  
+  .bg-mint {
+      background-color: #deffee;
+  }
+  
+   .bg-blue {
+      background-color: #dbe4ff;
+  }
+  
+  .bg-purple {
+      background-color: #f0dbff;
+  }
+  
+ .fa {
+  padding: 4px;
+  font-size: 24px;
+  width: 32px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  }
+
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  .fa-envelope {
+  background: #fff;
+  color: #ffdae9;
+  }
+
+  .fa-instagram {
+  background: #fff;
+  color: #ffdae9;
+  }
+
+  .fa-twitter {
+  background: #fff;
+  color: #ffdae9;
+  }
+
+ .fa-github {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-linkedin {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-google {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-tumblr {
+  background: #fff;
+  color: #ffdae9;
+ }
+
+ .fa-pinterest {
+  background: #fff;
+  color: #ffdae9;
+ }
+ 
+  .fa-file {
+  background: #fff;
+  color: #ffdae9;
+ }    
+    
   .thumbnail {
       padding: 0 0 15px 0;
       border: none;
