--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
   color: #ffdae9;
  }
   
-  .navbar {
+    .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color: #ffdae9;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -239,12 +239,14 @@
       border-radius: 0;
       font-family: Montserrat, sans-serif;
   }
+ 
   .navbar li a, .navbar .navbar-brand {
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
+      color: #ffdae9 !important;
       background-color: #fff !important;
+  }
   }
   .navbar-default .navbar-toggle {
       border-color: transparent;
