--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
       color: #ffdae9 !important;
       background-color: #fff !important;
   }
-  }
   .navbar-default .navbar-toggle {
       border-color: transparent;
       color: #fff !important;
@@ -457,12 +456,13 @@
 
 
 
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center bg-purple">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>MADE WITH <span class="glyphicon glyphicon-heart"> </p>
 </footer>
+
 
 <script>
 $(document).ready(function(){
