--- a/index.html
+++ b/index.html
@@ -244,8 +244,6 @@
 <div class="jumbotron text-center">
 <img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
-    <h4>Tech & Digital Enthusiast</h4>
-
   
   <!-- Add font awesome icons -->
 <a href="mailto:maria_el25@yahoo.com" class="fa fa-envelope"></a>
@@ -364,14 +362,14 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Mobile App" width="400" height="300">
-        <p><strong>Paris</strong></p>
+        <p><strong>Mobile App</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
-        <p><strong>New York</strong></p>
+        <p><strong>Personal Blog</strong></p>
         <p>We built New York</p>
       </div>
     </div>
