--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
 <div id="education" class="container-fluid bg-mint">
   <div class="text-center">
     <h2>Education</h2>
-    <h4>Choose a payment plan that works for you</h4>
+    <h4>South China University of Technology, 2011 - 2015</h4>
+    <h4>Guangdong University of Foreign Studies, 2015 - 2016</h4>
   
   
   
