--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     opacity: 0.7;
   }
   
-  .fa-envelope, fa-instagram {
+  .fa-envelope {
   background: #fff;
   color: #ffdae9;
   }
@@ -121,6 +121,11 @@
   .fa-file {
   background: #fff;
   color: #ffdae9;
+ }
+ 
+   .fa-heart {
+  color: #dc143c;
+  font-size: 17px;
  }
  
   .thumbnail {
@@ -254,6 +259,7 @@
 <a href="https://hellomariaelisa.blogspot.co.id/" class="fa fa-google"></a>
 <a href="http://pinterest.com/marialeung_" class="fa fa-pinterest"></a>
 <a href="#" class="fa fa-file"></a>
+
 
   
   
@@ -390,7 +396,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Code with <span class="glyphicon glyphicon-heart"></p>
+  <p>CODE WITH<a class="fa fa-heart"></a></p>
 </footer>
 
 <script>
