--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <div class="progress-bar" style="width:80%"></div>
   </div><br>
   
-  <h4><strong>Microsoft Office</strong></h4>
+  <h4><strong>Problem Solving</strong></h4>
   <div class="progress">
     <div class="progress-bar" style="width:70%"></div>
   </div><br>
