--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   }
   .fa {
   padding: 4px;
-  font-size: 24px;
-  width: 32px;
+  font-size: 27px;
+  width: 33px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -79,48 +79,39 @@
   }
   
   .fa-envelope {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
   }
 
   .fa-instagram {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
   }
 
   .fa-twitter {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
   }
 
  .fa-github {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
  }
 
  .fa-linkedin {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
  }
 
  .fa-google {
-  background: #fff;
-  color: #ffdae9;
+   color: #fff;
  }
 
  .fa-tumblr {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
  }
 
  .fa-pinterest {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
  }
  
   .fa-file {
-  background: #fff;
-  color: #ffdae9;
+  color: #fff;
  }
  
    .fa-heart {
