--- a/index.html
+++ b/index.html
@@ -273,11 +273,10 @@
 <div id="education" class="container-fluid bg-mint">
   <div class="text-center">
     <h2>Education</h2>
-    <h4>South China University of Technology, 2011 - 2015</h4><h4><i>B.Eng major in Computer Science</i></h4>
+    <h4>South China University of Technology, Guangzhou, 2011 - 2015</h4><h4><i>B.Eng major in Computer Science</i></h4>
  
       </div>      
     </div>    
-  
 
 <!-- Container (Experience Section) -->
 <div id="experience" class="container-fluid text-center bg-grey">
