--- a/index.html
+++ b/index.html
@@ -247,12 +247,9 @@
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
 <a href="https://mariaelisa25.github.io/" class="fa fa-github"></a>
 <a href="https://www.linkedin.com/in/maria-elisa/" class="fa fa-linkedin"></a>
-<a href="https://hellomariaelisa.blogspot.co.id/" class="fa fa-google"></a>
 <a href="http://pinterest.com/marialeung_" class="fa fa-pinterest"></a>
 <a href="#" class="fa fa-file"></a>
 
-
-  
   
 </div>
 
@@ -285,7 +282,7 @@
   
 </div>
 
-<!-- Container (Portfolio Section) -->
+<!-- Container (Skill Section) -->
 <div id="skill" class="container-fluid text-center bg-blue">
   <h2>Skills + Tools</h2><br>
   
@@ -343,7 +340,7 @@
   </div>
    
 
-<!-- Container (Contact Section) -->
+<!-- Container (Project Section) -->
 <div id="project" class="container-fluid bg-grey">
   <h2 class="text-center">Projects</h2>
   
@@ -371,8 +368,6 @@
     </div> 
     </div>
      </div>
-    
-  
 
 <footer class="container-fluid text-center bg-purple">
   <a href="#myPage" title="To Top">
