--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       height: 100%;
       margin-bottom: 10px;
   }
-  
+   
   .item h4 {
       font-size: 19px;
       line-height: 1.375em;
@@ -355,7 +355,7 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
-        <p><strong>Personal Blog</strong></p>
+        <p><strong><a href="https://hellomariaelisa.blogspot.com/"> Personal Blog</a></strong></p>
         <p>We built New York</p>
       </div>
     </div>
