--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Maria Elisa</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="/img/me-pink.png"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Lora:400,400i,700,700i" rel="stylesheet">
@@ -129,7 +129,7 @@
       height: 100%;
       margin-bottom: 10px;
   }
-   
+  
   .item h4 {
       font-size: 19px;
       line-height: 1.375em;
@@ -355,7 +355,7 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
-        <p><strong><a href="https://hellomariaelisa.blogspot.com/"> Personal Blog</a></strong></p>
+        <p><strong>Personal Blog</strong></p>
         <p>We built New York</p>
       </div>
     </div>
@@ -373,7 +373,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>CODE WITH<a class="fa fa-heart"></a></p>
+  <p>CODE WITH<i class="fa fa-heart"></i></p>
 </footer>
 
 <script>
