--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>CODE WITH<i class="fa fa-heart"></i></p>
+  <p>CODED WITH<i class="fa fa-heart"></i></p>
 </footer>
 
 <script>
