--- a/index.html
+++ b/index.html
@@ -280,7 +280,12 @@
 <!-- Container (Experience Section) -->
 <div id="experience" class="container-fluid text-center bg-grey">
   <h2>Work Experience</h2>
-  <h4>What we offer</h4>
+  
+  <h4><strong><i>Marketing</i></strong>, PT. Kohyei Indonesia, March 2017 - Sept 2017</h4>
+  <h4>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h4>
+  
+  <h4><strong><i>Undergraduate Researcher</strong></i>, South China University of Technology, March 2014 - June 2014</h4>
+  <h4>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h4>
   
 </div>
 
