--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
      <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img/project-blog.png" alt="Mobile App" width="400" height="300">
-        <p><strong>Mobile App</strong></p>
+        <img src="img/mobile-app.jpg" alt="Mobile App" width="400" height="300">
+        <p><strong>Android Mobile App</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
