--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/mobile-app.jpg" alt="Mobile App" width="400" height="300">
-        <p><strong>Android Mobile App</strong></p>
-        <p>Yes, we built Paris</p>
+        <p><strong>Restaurant Finder</strong></p>
+        <p>Bulit with Android Studio + Android SDK. Using MySQL for database and connected with the application. </p>
       </div>
     </div>
     <div class="col-sm-4">
