--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
-        <p><strong>Personal Blog</strong></p>
-        <p>We built New York</p>
+        <p><strong><a href="https://hellomariaelisa.blogspot.com/">Maria Elisa</a></strong></p>
+        <p>From hobby turn into a passion, I started my blog in June 2016 and wrote about lifestyle + coding + blogging.</p>
       </div>
     </div>
     <div class="col-sm-4">
