--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
         <p><strong><a href="https://hellomariaelisa.blogspot.com/">Maria Elisa</a></strong></p>
-        <p>From hobby turn into a passion, I started my blog in June 2016 and wrote about lifestyle + coding + blogging.</p>
+        <p>From hobby turn into a passion, it's all about blogging + coding + designing. I started my blog in June 2016 and wrote about lifestyle + coding + blogging.</p>
       </div>
     </div>
     <div class="col-sm-4">
