--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img/project-blog.png" alt="San Francisco" width="400" height="300">
-        <p><strong>Resume + Portfolio Website</strong></p>
+        <img src="img/project-blog.png" alt="Resume + Porfolio" width="400" height="300">
+        <p><strong><a href="https://mariaelisa25.github.io/">Resume + Portfolio Website</a></strong></p>
         <p>Developed this website using Github and Boostrap. </p>
       </div>
     </div> 
