--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img/project-blog.png" alt="Personal Blog" width="400" height="300">
-        <p><strong>Personal Blog</strong></p>
+        <p><strong><a href="https://hellomariaelisa.blogspot.com/">Personal Blog</a></strong></p>
         <p>From hobby turn into a passion, I started my blog in June 2016 and wrote about lifestyle + coding + blogging.</p>
       </div>
     </div>
