--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-<img src="https://www.w3schools.com/bootstrap/bandmember.jpg" class="img-circle person" width="255" height="255">
+<img src="img/profile-me.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
   
   <!-- Add font awesome icons -->
