--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
       background-color: #fcf1dc;
   }
   
-  .bg-yellow {
-      background-color: #ffffba;
-  }
-  
   .bg-mint {
       background-color: #deffee;
   }
@@ -73,6 +69,7 @@
   .bg-purple {
       background-color: #f0dbff;
   }
+
   .fa {
   padding: 4px;
   font-size: 27px;
@@ -177,6 +174,11 @@
       margin-bottom: 20px;
       color: #818181;
   }
+  
+  .progress-bar-custom {
+  background-color: #fcf1dc;
+  }
+  
   .slideanim {visibility:hidden;}
   .slide {
       animation-name: slide;
@@ -301,7 +303,7 @@
     
     <h4><strong>C++</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:50%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:50%"></div>
   </div><br>
   
   <h4><strong>Java</strong></h4>
@@ -311,7 +313,7 @@
   
   <h4><strong>HTML & CSS</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:70%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:70%"></div>
   </div><br>
   
     <h4><strong>Android Development</strong></h4>
@@ -330,7 +332,7 @@
      
      <h4><strong>Photoshop</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:90%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:90%"></div>
   </div><br>
 
 <h4><strong>Blogging</strong></h4>
@@ -340,7 +342,7 @@
   
   <h4><strong>Problem Solving</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:70%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:70%"></div>
   </div><br>
 
     </div>
