--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
       background-color: #ffdae9;
   }
   
-  .bg-creme {
-      background-color: #fcf1dc;
-  }
-  
   .bg-mint {
       background-color: #deffee;
   }
@@ -176,7 +172,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #fcf1dc;
+  background-color: #ffcccc;
   }
   
   .slideanim {visibility:hidden;}
