--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   }
   
   .progress-bar-custom {
-  background-color: #ffcccc;
+  background-color: #e6ccff;
   }
   
   .slideanim {visibility:hidden;}
