--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   
   <h4><strong>Java</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:30%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:30%"></div>
   </div><br>
   
   <h4><strong>HTML & CSS</strong></h4>
@@ -314,7 +314,7 @@
   
     <h4><strong>Android Development</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:55%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:55%"></div>
   </div><br>
   
   </div>
@@ -323,7 +323,7 @@
     
      <h4><strong>Analysis</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:75%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:75%"></div>
   </div><br>
      
      <h4><strong>Photoshop</strong></h4>
@@ -333,7 +333,7 @@
 
 <h4><strong>Blogging</strong></h4>
   <div class="progress">
-    <div class="progress-bar" style="width:80%"></div>
+    <div class="progress-bar progress-bar-custom" style="width:80%"></div>
   </div><br>
   
   <h4><strong>Problem Solving</strong></h4>
